Poprawiono teks, dodano przycisk

--- a/index.htm
+++ b/index.htm
@@ -44,8 +44,8 @@
           <h5 class="card-title">Portfolio — ta strona</h5>
           <p class="card-text">Prosta strona osobista stworzona w HTML, CSS. Publikowana na GitHub Pages.</p>
           <p>
-            <a href="https://github.com/Greg-Tom/porfolio_html" target="_blank" class="btn">Demo</a>
-            <a href="#" class="btn btn-sm btn-outline-secondary disabled">(GitHub)</a>
+            <a href="#" class="btn btn-sm btn-outline-primary disabled">Demo</a>
+            <a href="#" class="btn btn-sm btn-outline-secondary disabled">Kod (GitHub)</a>
           </p>
         </div>
       </div>
@@ -60,8 +60,8 @@
 
     <section id="contact" class="mb-5">
       <h2>Kontakt</h2>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/grzegorz-tomaszewski-9b296436a/" target="_blank">twoj-profil</a></p>
-      <p>GitHub: <a href="https://github.com/Greg-Tom" target="_blank">twojlogin</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/twoj-profil" target="_blank">https://www.linkedin.com/in/grzegorz-tomaszewski-9b296436a/</a></p>
+      <p>GitHub: <a href="https://github.com/twojlogin" target="_blank">Greg-Tom</a></p>
     </section>
   </main>
 
